ucurry/bin/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On program shift to state 1
-- On defs shift to state 2
## Reductions:
-- On UNITTYPE UNIT TL STRTYPE STRINGLIT NOT NEG NAME LET LBRACKET LBRACE LAMBDA INTTYPE INTEGER IF HD FUNCTION EOF DATATYPE CASE CAPNAME BOOLTYPE BOOL BEGIN
--   reduce production defs ->

State 1:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 2:
## Known stack suffix:
## defs
## LR(1) items:
defs -> defs . fundef SEMI [ UNITTYPE UNIT TL STRTYPE STRINGLIT NOT NEG NAME LET LBRACKET LBRACE LAMBDA INTTYPE INTEGER IF HD FUNCTION EOF DATATYPE CASE CAPNAME BOOLTYPE BOOL BEGIN ]
defs -> defs . vardef SEMI [ UNITTYPE UNIT TL STRTYPE STRINGLIT NOT NEG NAME LET LBRACKET LBRACE LAMBDA INTTYPE INTEGER IF HD FUNCTION EOF DATATYPE CASE CAPNAME BOOLTYPE BOOL BEGIN ]
defs -> defs . datatypedef SEMI [ UNITTYPE UNIT TL STRTYPE STRINGLIT NOT NEG NAME LET LBRACKET LBRACE LAMBDA INTTYPE INTEGER IF HD FUNCTION EOF DATATYPE CASE CAPNAME BOOLTYPE BOOL BEGIN ]
defs -> defs . exp SEMI [ UNITTYPE UNIT TL STRTYPE STRINGLIT NOT NEG NAME LET LBRACKET LBRACE LAMBDA INTTYPE INTEGER IF HD FUNCTION EOF DATATYPE CASE CAPNAME BOOLTYPE BOOL BEGIN ]
program -> defs . EOF [ # ]
## Transitions:
-- On UNITTYPE shift to state 3
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRTYPE shift to state 12
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTTYPE shift to state 13
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On FUNCTION shift to state 124
-- On EOF shift to state 132
-- On DATATYPE shift to state 133
-- On CASE shift to state 43
-- On CAPNAME shift to state 143
-- On BOOLTYPE shift to state 15
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On vardef shift to state 144
-- On unop shift to state 46
-- On typ shift to state 146
-- On literal shift to state 47
-- On lambda shift to state 48
-- On funtype shift to state 34
-- On fundef shift to state 150
-- On exp shift to state 152
-- On datatypedef shift to state 154
-- On binop shift to state 54
## Reductions:

State 3:
## Known stack suffix:
## UNITTYPE
## LR(1) items:
typ -> UNITTYPE . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> UNITTYPE

State 4:
## Known stack suffix:
## UNIT
## LR(1) items:
literal -> UNIT . [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
## Reductions:
-- On UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD
--   reduce production literal -> UNIT

State 5:
## Known stack suffix:
## TL
## LR(1) items:
unop -> TL . exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 123
-- On binop shift to state 54
## Reductions:

State 6:
## Known stack suffix:
## STRINGLIT
## LR(1) items:
literal -> STRINGLIT . [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
## Reductions:
-- On UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD
--   reduce production literal -> STRINGLIT

State 7:
## Known stack suffix:
## NOT
## LR(1) items:
unop -> NOT . exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 122
-- On binop shift to state 54
## Reductions:

State 8:
## Known stack suffix:
## NEG
## LR(1) items:
unop -> NEG . exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 121
-- On binop shift to state 54
## Reductions:

State 9:
## Known stack suffix:
## NAME
## LR(1) items:
exp -> NAME . [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
exp -> NAME . ASN exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On ASN shift to state 10
## Reductions:
-- On UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD
--   reduce production exp -> NAME

State 10:
## Known stack suffix:
## NAME ASN
## LR(1) items:
exp -> NAME ASN . exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 120
-- On binop shift to state 54
## Reductions:

State 11:
## Known stack suffix:
## LET
## LR(1) items:
exp -> LET . bindings IN exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNITTYPE shift to state 3
-- On STRTYPE shift to state 12
-- On INTTYPE shift to state 13
-- On CAPNAME shift to state 14
-- On BOOLTYPE shift to state 15
-- On typ shift to state 16
-- On funtype shift to state 34
-- On bindings shift to state 112
## Reductions:

State 12:
## Known stack suffix:
## STRTYPE
## LR(1) items:
typ -> STRTYPE . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> STRTYPE

State 13:
## Known stack suffix:
## INTTYPE
## LR(1) items:
typ -> INTTYPE . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> INTTYPE

State 14:
## Known stack suffix:
## CAPNAME
## LR(1) items:
typ -> CAPNAME . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> CAPNAME

State 15:
## Known stack suffix:
## BOOLTYPE
## LR(1) items:
typ -> BOOLTYPE . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> BOOLTYPE

State 16:
## Known stack suffix:
## typ
## LR(1) items:
bindings -> typ . NAME ASN exp [ IN COMMA ]
funtype -> typ . ARROW typ [ NAME LISTTYPE ARROW ]
typ -> typ . LISTTYPE [ NAME LISTTYPE ARROW ]
## Transitions:
-- On NAME shift to state 17
-- On LISTTYPE shift to state 31
-- On ARROW shift to state 32
## Reductions:

State 17:
## Known stack suffix:
## typ NAME
## LR(1) items:
bindings -> typ NAME . ASN exp [ IN COMMA ]
## Transitions:
-- On ASN shift to state 18
## Reductions:

State 18:
## Known stack suffix:
## typ NAME ASN
## LR(1) items:
bindings -> typ NAME ASN . exp [ IN COMMA ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 111
-- On binop shift to state 54
## Reductions:

State 19:
## Known stack suffix:
## LBRACKET
## LR(1) items:
literal -> LBRACKET . literal_list RBRACKET [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On STRINGLIT shift to state 6
-- On LBRACKET shift to state 19
-- On INTEGER shift to state 20
-- On BOOL shift to state 21
-- On literal_list shift to state 22
-- On literal shift to state 26
## Reductions:
-- On RBRACKET COMMA
--   reduce production literal_list ->

State 20:
## Known stack suffix:
## INTEGER
## LR(1) items:
literal -> INTEGER . [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
## Reductions:
-- On UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD
--   reduce production literal -> INTEGER

State 21:
## Known stack suffix:
## BOOL
## LR(1) items:
literal -> BOOL . [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
## Reductions:
-- On UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD
--   reduce production literal -> BOOL

State 22:
## Known stack suffix:
## LBRACKET literal_list
## LR(1) items:
literal -> LBRACKET literal_list . RBRACKET [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
literal_list -> literal_list . COMMA literal [ RBRACKET COMMA ]
## Transitions:
-- On RBRACKET shift to state 23
-- On COMMA shift to state 24
## Reductions:

State 23:
## Known stack suffix:
## LBRACKET literal_list RBRACKET
## LR(1) items:
literal -> LBRACKET literal_list RBRACKET . [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
## Reductions:
-- On UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACKET RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DOUBLEARROW DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD
--   reduce production literal -> LBRACKET literal_list RBRACKET

State 24:
## Known stack suffix:
## literal_list COMMA
## LR(1) items:
literal_list -> literal_list COMMA . literal [ RBRACKET COMMA ]
## Transitions:
-- On UNIT shift to state 4
-- On STRINGLIT shift to state 6
-- On LBRACKET shift to state 19
-- On INTEGER shift to state 20
-- On BOOL shift to state 21
-- On literal shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## literal_list COMMA literal
## LR(1) items:
literal_list -> literal_list COMMA literal . [ RBRACKET COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET COMMA
--   reduce production literal_list -> literal_list COMMA literal

State 26:
## Known stack suffix:
## literal
## LR(1) items:
literal_list -> literal . [ RBRACKET COMMA ]
## Transitions:
## Reductions:
-- On RBRACKET COMMA
--   reduce production literal_list -> literal

State 27:
## Known stack suffix:
## LBRACE
## LR(1) items:
exp -> LBRACE . exp args RBRACE [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 106
-- On binop shift to state 54
## Reductions:

State 28:
## Known stack suffix:
## LAMBDA
## LR(1) items:
lambda -> LAMBDA . LBRACE funtype RBRACE formals ARROW exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On LBRACE shift to state 29
## Reductions:

State 29:
## Known stack suffix:
## LAMBDA LBRACE
## LR(1) items:
lambda -> LAMBDA LBRACE . funtype RBRACE formals ARROW exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNITTYPE shift to state 3
-- On STRTYPE shift to state 12
-- On INTTYPE shift to state 13
-- On CAPNAME shift to state 14
-- On BOOLTYPE shift to state 15
-- On typ shift to state 30
-- On funtype shift to state 35
## Reductions:

State 30:
## Known stack suffix:
## typ
## LR(1) items:
funtype -> typ . ARROW typ [ RBRACE LISTTYPE COLON ARROW ]
typ -> typ . LISTTYPE [ LISTTYPE ARROW ]
## Transitions:
-- On LISTTYPE shift to state 31
-- On ARROW shift to state 32
## Reductions:

State 31:
## Known stack suffix:
## typ LISTTYPE
## LR(1) items:
typ -> typ LISTTYPE . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> typ LISTTYPE

State 32:
## Known stack suffix:
## typ ARROW
## LR(1) items:
funtype -> typ ARROW . typ [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
-- On UNITTYPE shift to state 3
-- On STRTYPE shift to state 12
-- On INTTYPE shift to state 13
-- On CAPNAME shift to state 14
-- On BOOLTYPE shift to state 15
-- On typ shift to state 33
-- On funtype shift to state 34
## Reductions:

State 33:
## Known stack suffix:
## typ ARROW typ
## LR(1) items:
funtype -> typ . ARROW typ [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
funtype -> typ ARROW typ . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
typ -> typ . LISTTYPE [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
-- On LISTTYPE shift to state 31
## Reductions:
-- On SEMI RBRACE NAME COLON BAR ARROW
--   reduce production funtype -> typ ARROW typ

State 34:
## Known stack suffix:
## funtype
## LR(1) items:
typ -> funtype . [ SEMI RBRACE NAME LISTTYPE COLON BAR ARROW ]
## Transitions:
## Reductions:
-- On SEMI RBRACE NAME LISTTYPE COLON BAR ARROW
--   reduce production typ -> funtype

State 35:
## Known stack suffix:
## LAMBDA LBRACE funtype
## LR(1) items:
lambda -> LAMBDA LBRACE funtype . RBRACE formals ARROW exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
typ -> funtype . [ LISTTYPE ARROW ]
## Transitions:
-- On RBRACE shift to state 36
## Reductions:
-- On LISTTYPE ARROW
--   reduce production typ -> funtype

State 36:
## Known stack suffix:
## LAMBDA LBRACE funtype RBRACE
## LR(1) items:
lambda -> LAMBDA LBRACE funtype RBRACE . formals ARROW exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On NAME shift to state 37
-- On formals shift to state 38
## Reductions:

State 37:
## Known stack suffix:
## NAME
## LR(1) items:
formals -> NAME . [ NAME ASN ARROW ]
## Transitions:
## Reductions:
-- On NAME ASN ARROW
--   reduce production formals -> NAME

State 38:
## Known stack suffix:
## LAMBDA LBRACE funtype RBRACE formals
## LR(1) items:
formals -> formals . NAME [ NAME ARROW ]
lambda -> LAMBDA LBRACE funtype RBRACE formals . ARROW exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On NAME shift to state 39
-- On ARROW shift to state 40
## Reductions:

State 39:
## Known stack suffix:
## formals NAME
## LR(1) items:
formals -> formals NAME . [ NAME ASN ARROW ]
## Transitions:
## Reductions:
-- On NAME ASN ARROW
--   reduce production formals -> formals NAME

State 40:
## Known stack suffix:
## LAMBDA LBRACE funtype RBRACE formals ARROW
## LR(1) items:
lambda -> LAMBDA LBRACE funtype RBRACE formals ARROW . exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 105
-- On binop shift to state 54
## Reductions:

State 41:
## Known stack suffix:
## IF
## LR(1) items:
exp -> IF . exp THEN exp ELSE exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 100
-- On binop shift to state 54
## Reductions:

State 42:
## Known stack suffix:
## HD
## LR(1) items:
unop -> HD . exp [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 99
-- On binop shift to state 54
## Reductions:

State 43:
## Known stack suffix:
## CASE
## LR(1) items:
exp -> CASE . exp OF case_exp_list [ UNIT TL TIMES THEN SUB STRINGLIT SEMI RBRACE OR OF NOT NEQ NEG NAME MOD LET LESS LEQ LBRACKET LBRACE LAMBDA INTEGER IN IF HD GREATER GEQ EQUAL ELSE DIVIDE CONS COMMA CASE CAPNAME BOOL BEGIN BAR AND ADD ]
## Transitions:
-- On UNIT shift to state 4
-- On TL shift to state 5
-- On STRINGLIT shift to state 6
-- On NOT shift to state 7
-- On NEG shift to state 8
-- On NAME shift to state 9
-- On LET shift to state 11
-- On LBRACKET shift to state 19
-- On LBRACE shift to state 27
-- On LAMBDA shift to state 28
-- On INTEGER shift to state 20
-- On IF shift to state 41
-- On HD shift to state 42
-- On CASE shift to state 43
-- On CAPNAME shift to state 44
-- On BOOL shift to state 21
-- On BEGIN shift to state 45
-- On unop shift to state 46
-- On literal shift to state 47
-- On lambda shift to state 48
-- On exp shift to state 84
-- On binop shift to state 54
## Reductions:
